# CrewAi_workspace

./: .gitignore  CLAUDE.md  README.md  report.md  update_readme.py
.claude/: settings.local.json
.github/workflows/: update-readme.yml
CoWrite/: README.md  pyproject.toml
CoWrite/src/writer_crew/: crew.py  main.py
CoWrite/src/writer_crew/config/: agents.yaml  tasks.yaml
CoWrite/src/writer_crew/tools/: file_tools.py  search_tools.py
CrewAI_Writer_Gradio/INSTRUCTIONS/: MASTERPLAN.md  ROADMAP.md  TASKS-TO-DO.md
CrewAi_docs/: cli_instructions.md
basic_researcher/: README.md  pyproject.toml
basic_researcher/src/basic_researcher/: crew.py  main.py
cataloger_crew/: .gitignore  README.md  ollama_config.yaml  pyproject.toml
cataloger_crew/knowledge/: user_preference.txt
cataloger_crew/src/cataloger_crew/: __init__.py  crew.py  main.py
cataloger_crew/src/cataloger_crew/config/: agents.yaml  tasks.yaml
cataloger_crew/src/cataloger_crew/tools/: __init__.py  analysis_tools.py  catalog_tools.py  search_tools.py
crewai_tools_library/: README.md  pyproject.toml
crewai_tools_library/examples/: basic_usage.py  crew_integration_example.py  wolfram_alpha_example.py
crewai_tools_library/src/crewai_custom_tools/: __init__.py
crewai_tools_library/src/crewai_custom_tools/analysis/: __init__.py  wolfram_alpha_tool.py
crewai_tools_library/src/crewai_custom_tools/base/: __init__.py  tool_base.py
crewai_tools_library/src/crewai_custom_tools/content/: __init__.py  text_tools.py
crewai_tools_library/src/crewai_custom_tools/data/: __init__.py  file_tools.py
crewai_tools_library/src/crewai_custom_tools/web/: __init__.py  search_tools.py
local_researcher/: .gitignore  README.md  article.md  pyproject.toml
local_researcher/src/local_researcher/: crew.py  main.py
simpel_research_agent/: .gitignore  README.md  pyproject.toml
simpel_research_agent/src/simpel_research_agent/: crew.py  main.py
writeCraft_crew/INSTRUCTIONS/: MASTERPLAN.md  ROADMAP.md  TASKS-TO-DO.md
