[project]
name = "writer_crew"
version = "0.1.0"
description = "writer_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
writer_crew = "writer_crew.main:run"
run_crew = "writer_crew.main:run"
train = "writer_crew.main:train"
replay = "writer_crew.main:replay"
test = "writer_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
