[project]
name = "basic_researcher"
version = "0.1.0"
description = "basic-researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
basic_researcher = "basic_researcher.main:run"
run_crew = "basic_researcher.main:run"
train = "basic_researcher.main:train"
replay = "basic_researcher.main:replay"
test = "basic_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
