[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cataloger-crew"
version = "0.1.0"
description = "Autonomous web cataloging AI crew using CrewAI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "crewai[tools]>=0.86.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "schedule>=1.2.0",
    "ollama>=0.1.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cataloger_crew"]

[project.scripts]
cataloger-crew = "cataloger_crew.main:run"

[tool.crewai]
project_name = "cataloger_crew"